# sre-agent

./: .env.example  .env.full  .env.minimal  .env.testing  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.prompt_server  INSTALL_CLI.md  Makefile  README.md  bandit.yaml  build_push_docker.sh  compose.agent.yaml  compose.dev.yaml  compose.ecr.yaml  compose.gcp.yaml  compose.ghcr.yaml  compose.minimal.aws.yaml  compose.minimal.gcp.yaml  compose.tests.yaml  compose.yaml  credential_setup.py  docker-compose.yaml  pyproject.toml  run.py  setup_credentials.py
.github/workflows/: build-push-images.yml  ci.yml
charts/sre-agent/: Chart.yaml  values.yaml
charts/sre-agent/charts/llm-server/: Chart.yaml
charts/sre-agent/charts/llm-server/templates/: deployment.tpl  deployment.yaml  secret.tpl  service.tpl  service.yaml
charts/sre-agent/charts/mcp-github/: Chart.yaml
charts/sre-agent/charts/mcp-github/templates/: deployment.tpl  deployment.yaml  secret.tpl  service.tpl  service.yaml
charts/sre-agent/charts/mcp-kubernetes/: Chart.yaml
charts/sre-agent/charts/mcp-kubernetes/templates/: deployment.tpl  deployment.yaml  service-account.tpl  service-account.yaml  service.tpl  service.yaml
charts/sre-agent/charts/mcp-slack/: Chart.yaml
charts/sre-agent/charts/mcp-slack/templates/: deployment.tpl  deployment.yaml  secret.tpl  service.tpl  service.yaml
charts/sre-agent/charts/orchestrator/: Chart.yaml
charts/sre-agent/charts/orchestrator/templates/: deployment.tpl  deployment.yaml  secret.tpl  service.tpl  service.yaml
charts/sre-agent/charts/prompt-server/: Chart.yaml
charts/sre-agent/charts/prompt-server/templates/: deployment.tpl  deployment.yaml  service.tpl  service.yaml
charts/sre-agent/templates/: namespace.yaml
docs/: agent-architecture.md  creating-an-iam-role.md  credentials.md  ecr-setup.md  kubernetes-deployment.md  production-journey.md
k8s/: agent.yaml  apply_manifests.sh  mcp-github.yaml  mcp-kubernetes.yaml  mcp-slack.yaml  sre-orchestrator.yaml
legacy/: README.md  pyproject.toml
legacy/sre_agent/: compose.dev.yaml
legacy/sre_agent/cli/commands/: help.py
legacy/sre_agent/cli/utils/: service_manager.py
legacy/sre_agent/client/: client.py
legacy/sre_agent/client/utils/: auth.py  schemas.py
legacy/sre_agent/firewall/: firewall.py
legacy/sre_agent/llm/: main.py
legacy/sre_agent/llm/utils/: adapters.py
legacy/sre_agent/servers/prompt_server/utils/: schemas.py
legacy/sre_agent/shared/: logger.py
legacy/tests/security_tests/: test_guardrails.py  test_input_validation.py
legacy/tests/unit_tests/: test_adapters.py
legacy_compose_files/: compose.ecr.yaml  compose.minimal.aws.yaml  compose.minimal.gcp.yaml
scripts/: build_and_push_images.sh  scale_eks_target.sh
src/sre_agent/: __init__.py  agent.py  api.py  config.py  interfaces.py  prompts.py  run.py
src/sre_agent/cli/: banner.py  config.py  configuration.py  env.py  interactive_shell.py  main.py  state.py  ui.py
src/sre_agent/cli/configuration/: __init__.py  models.py  setup.py  wizard.py
src/sre_agent/cli/configuration/providers/: aws.py
src/sre_agent/cli/mode/: local.py  remote.py
src/sre_agent/cli/mode/remote/: menu.py
src/sre_agent/cli/presentation/: banner.py  styles.py
src/sre_agent/core/: __init__.py  agent.py  api.py  config.py  prompts.py  settings.py
src/sre_agent/core/deployments/: __init__.py
src/sre_agent/core/deployments/aws_ecs/: __init__.py  cleanup.py  deploy.py  ecr.py  ecs_tasks.py  iam.py  images.py  models.py  network.py  secrets.py  security_groups.py  status.py
src/sre_agent/core/prompts/: diagnosis_prompt.txt
src/sre_agent/core/tools/: cloudwatch.py  github.py  slack.py
src/sre_agent/eval/: README.md
src/sre_agent/eval/tool_call/: README.md  config.py  experiment.py
src/sre_agent/eval/tool_call/metrics/: expected_tool_select_order.py  expected_tool_selection.py  span_tools.py
src/sre_agent/eval/tool_choice/dataset/: __init__.py  schema.py  (+1 more)
src/sre_agent/prompts/: diagnosis_prompt.txt  system_prompt.txt
src/sre_agent/tools/: __init__.py  cloudwatch.py  github.py  slack.py
sre_agent/: client.py  compose.agent.yaml  prompt_server.py
sre_agent/cli/: README.md  __init__.py  interactive_shell.py  main.py  pyproject.toml
sre_agent/cli/commands/: __init__.py  config.py  diagnose.py  interactive.py  logs.py  monitor.py  platform.py  start.py  startup.py  status.py  stop.py
sre_agent/cli/utils/: __init__.py  ascii_art.py  config.py  env_setup.py  paths.py  service_manager.py
sre_agent/client/: Dockerfile  client.py  pyproject.toml  startup.sh
sre_agent/client/utils/: firewall.py  schemas.py
sre_agent/core/: auth.py
sre_agent/firewall/: Dockerfile  firewall.py  pyproject.toml  startup.sh
sre_agent/llm/: Dockerfile  main.py  pyproject.toml
sre_agent/llm/utils/: adapters.py  clients.py  schemas.py
sre_agent/servers/: README.md
sre_agent/servers/github/: index.ts
sre_agent/servers/github-mcp-server/: Dockerfile
sre_agent/servers/github-mcp-server/script/: licenses  licenses-check
sre_agent/servers/github/operations/: files.ts
sre_agent/servers/mcp-server-kubernetes/: Dockerfile  startup.sh
sre_agent/servers/prompt_server/: pyproject.toml  server.py
sre_agent/servers/slack/: package-lock.json
sre_agent/shared/: logger.py  schemas.py
sre_agent/utils/: auth.py  logger.py
tests/: pyproject.toml
tests/app_tests/: test_client.py
tests/security_tests/: test_guardrails.py  test_input_validation.py
tests/unit_tests/: test_adapters.py
(+21 files in other folders)
