[project]
name = "sre-agent-cli"
version = "0.0.1"
description = "AI-powered Site Reliability Engineering CLI assistant"
authors = [{ name = "Fuzzy Labs", email = "info@fuzzylabs.ai" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["sre", "devops", "ai", "kubernetes", "monitoring", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
sre-agent = "sre_agent.cli.main:main"

[project.urls]
Homepage = "https://github.com/fuzzylabs/sre-agent"
Documentation = "https://github.com/fuzzylabs/sre-agent/docs"
Repository = "https://github.com/fuzzylabs/sre-agent"
Issues = "https://github.com/fuzzylabs/sre-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sre_agent/cli"]